updated react for lint

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "express": "^4.19.2",
     "jsdom": "^24.0.0",
-    "lint": "^1.1.2"
+    "lint": "^1.1.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
