--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,5 +19,10 @@
         "react"
     ],
     "rules": {
-    }
+    },
+    "settings": {
+        "react": {
+          "version": "detect" // Automatically detect the React version
+        }
+      }
 }
